data_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: data-pod-brats
  labels:
    app: data-pod-brats
spec:
  nodeSelector:
    topology.kubernetes.io/region: us-west
  
  containers:
    - name: brats-processing
      image: gitlab-registry.nrp-nautilus.io/prp/jupyter-stack/prp
      
      command: ["/bin/bash", "-c"]
      args:
        - |



          tail -f /dev/null
      
      volumeMounts:
        - name: workspace
          mountPath: /app
        - name: data1
          mountPath: /data1
        - name: data2
          mountPath: /data2
        - name: data3
          mountPath: /data3
        - name: data4
          mountPath: /data4
        - name: shm
          mountPath: /dev/shm
      
  
  volumes:
    - name: workspace
      emptyDir:
        sizeLimit: 50Gi
    - name: data1
      persistentVolumeClaim:
        claimName: brats2025-1
    - name: data2
      persistentVolumeClaim:
        claimName: brats2025-2
    - name: data3
      persistentVolumeClaim:
        claimName: brats2025-3
    - name: data4
      persistentVolumeClaim:
        claimName: brats2025-4
    - name: shm
      emptyDir:
        medium: Memory
        sizeLimit: 16Gi
  
  restartPolicy: Never
