evalpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: eval-unetr-brats
  labels:
    app: eval-unetr-brats
spec:
  nodeSelector:
    topology.kubernetes.io/region: us-west
    nautilus.io/linstor: "true"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-A10
            - NVIDIA-GeForce-RTX-3090
            - NVIDIA-L40
            - NVIDIA-A40
  
  containers:
    - name: brats-processing
      image: gitlab-registry.nrp-nautilus.io/prp/jupyter-stack/prp
      
      command: ["/bin/bash", "-c"]
      args:
        - |
          [...]
      volumeMounts:
        - name: workspace
          mountPath: /app
        - name: data
          mountPath: /data
        - name: shm
          mountPath: /dev/shm
      
      resources:
        requests:
          memory: 24Gi                # Increased for multi-GPU
          cpu: "12"                   # Increased for multi-GPU
          nvidia.com/gpu: "2"         # Request 2 GPUs (adjust as needed)
        limits:
          memory: 32Gi
          cpu: "16"
          nvidia.com/gpu: "2"
  
  volumes:
    - name: workspace
      emptyDir:
        sizeLimit: 50Gi
    - name: data
      persistentVolumeClaim:
        claimName: brats2025-2
    - name: shm
      emptyDir:
        medium: Memory
        sizeLimit: 16Gi
  
  restartPolicy: Never
