fets-desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fets-desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fets-desktop
  template:
    metadata:
      labels:
        app: fets-desktop
    spec:
      hostname: fets-desktop
      containers:
      - name: fets-desktop
        image: ghcr.io/selkies-project/nvidia-glx-desktop:latest
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 64Gi
            cpu: "16"
            nvidia.com/gpu: 1
          requests:
            memory: 4Gi
            cpu: "2"
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: fets-cache-vol
        - mountPath: /home/ubuntu
          name: fets-root-vol
        - mountPath: /workspace
          name: workspace-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: fets-cache-vol
        emptyDir: {}
      - name: fets-root-vol
        emptyDir: {}
      - name: workspace-vol
        emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: NotIn
                values:
                - ucsd-suncave
