fets_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: fets-pod
  labels:
    app: fets-brats
spec:
  nodeSelector:
    nautilus.io/linstor: "true"
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: nvidia.com/gpu.product
            operator: In
            values:
            - NVIDIA-A10
            - NVIDIA-GeForce-RTX-3090
            - NVIDIA-L40
            - NVIDIA-A40
  tolerations:
  - key: nvidia.com/gpu
    operator: Exists
    effect: PreferNoSchedule
  imagePullSecrets:
  - name: gitlab-registry-secret
  containers:
  - name: fets-container
    image: ghcr.io/fets-ai/front-end:1.0.2
    command: ["/bin/bash"]
    args:
      - -c
      - |
        [...]
    volumeMounts:
      - name: data
        mountPath: /data
    resources:
      requests:
        memory: 24Gi      
        cpu: "12"     
        nvidia.com/gpu: "1" 
      limits:
        memory: 32Gi
        cpu: "16"
        nvidia.com/gpu: "1"
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: brats2025-2
